--- a/infra/api/deployment.yaml
+++ b/infra/api/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: gestao-pedidos
 spec:
-  replicas: 3
+  # replicas: 3
   selector:
     matchLabels:
       app: gestao-pedidos
@@ -19,3 +19,10 @@ spec:
         image: arturcavalcante/gestao-pedidos:latest
         ports:
         - containerPort: 8080
+        resources:
+          limits:
+            cpu: 50m
+            memory: 70Mi
+          requests:
+            cpu: 30m
+            memory: 50Mi
