--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -17,9 +17,9 @@ services:
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
         ports:
-            - '8080:8080'
+            - '80:8080'
         build:
             context: .
-            dockerfile: Service/Dockerfile
+            dockerfile: GestaoPedidos.Web/Dockerfile
         depends_on:
             - postgres-data
