--- a/infra/database/service.yaml
+++ b/infra/database/service.yaml
@@ -3,14 +3,18 @@ kind: Service
 metadata:
   name: gestao-pedidos
 spec:
-  type: NodePort #trocar para load balance
   ports:
-    - port: 8080
+    - name: http
+      protocol: TCP
+      port: 80
       targetPort: 8080
-      nodePort: 32700
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 8080
   selector:
     app: gestao-pedidos
-    
+  type: LoadBalancer
 
 
     
