--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -12,14 +12,14 @@ services:
             - ./postgres/data:/var/lib/postgresql/data
             - ./postgres/table_atualizada.sql:/docker-entrypoint-initdb.d/table_atualizada.sql
     
-    gestao-pedido-service:
-        image: gestao-pedido-service:${TAG:-latest}
-        environment:
-            - ASPNETCORE_ENVIRONMENT=Development
-        ports:
-            - '80:8080'
-        build:
-            context: .
-            dockerfile: GestaoPedidos.Web/Dockerfile
-        depends_on:
-            - postgres-data
+#    gestao-pedido-service:
+#        image: gestao-pedido-service:${TAG:-latest}
+#        environment:
+#            - ASPNETCORE_ENVIRONMENT=Development
+#        ports:
+#            - '80:8080'
+#        build:
+#            context: .
+#            dockerfile: GestaoPedidos.Web/Dockerfile
+#        depends_on:
+#            - postgres-data
